# mtx

./: Cargo.toml  README.md  Session.vim  conv.rs  justfile  mod.rs
.devcontainer/: devcontainer.json
raw/: base.html  example.html  index.html  style.css
src/: lib.rs  main.rs  symbols.rs
src/ast/: base.rs  expressions.rs  mod.rs  module.rs  opperations.rs  system_func.rs  transform.rs
src/parser/: mod.rs
src/parser/cmd/: mod.rs
src/parser/markdown/: mod.rs
src/parser/math/: expression.rs  mod.rs  module.rs  paren.rs  parser.md  statement.rs  value.rs  whitespace.rs
src/parser/python/: mod.rs
src/test/: mod.rs
src/writer/: mod.rs
src/writer/display/: html.rs  mod.rs
src/writer/text/: mod.rs
test/: 1.mtx  conv.rs
