[package]
name = "mtx"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
async-stream = "0.3.6"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
fs = "0.0.5"
futures = "0.3.31"
log = "0.4.29"
nom = "8.0.0"
notify = "8.2.0"
quote = "1.0.41"
rustpython-parser = "0.4.0"
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
tokio-util = {"version" = "*", "features" = ["io"]}
